# OptiForge

./: .gitignore  Dockerfile  README.md  app.py  remove_logo_bg.py  requirements.txt
LLVMProject/OpcodeCounter/: CMakeLists.txt  OpcodeCounter.cpp
